# S24-core-course-labs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  14.md  CI.md  DOCKER.md  Devops.sln  Dockerfile  Makefile  PYTHON.md  README.md  __init__.py  app.py  app_python.py  config.py  cspell.json  custom-words.txt  docker-compose.yml  flake.nix  lab1.md  lab10.md  lab11.md  lab12.md  lab13.md  lab14.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md  logs.txt  pre-commit.sh  promtail-config.yaml  pyproject.toml  requirements.txt  secrets.yaml  shell.nix  (+2 more)
app_python/: .app.py.swp  .coverage  .dccache  .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  .test.py.swp  CI.md  DOCKER.md  Docker.md  Dockerfile  LICENSE  Makefile  PYTHON.MD  PYTHON.md  Pipfile  README.MD  README.md  __init__.py  __main__.py  app-test.py  app.py  app_python.py  app_utils.py  application.py  config.py  deployment.yml  docker-compose.yaml  docker-compose.yml  fast_api_app.py  index.html  justfile  main.py  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  run.py  (+18 more)
app_python/ansible/: ANSIBLE.md  ansible.cfg
app_python/api/: __init__.py  app.py  main.py  time_manager.py
app_python/app/: __init__.py  __main__.py  app.py  config.py  datetime_formatter.py  logger.py  main.py  moscow_date_time.py  router.py  routes.py  server.py  test_main.py  time.py  utils.py  visits_counter.py
app_python/app-python/: values.yaml
app_python/controllers/: time.py
app_python/flaskr/: app.py
app_python/k8s/: 11.md  13.md  14.md  README.md  deployment.yml  service.yml
app_python/monitoring/: .gitignore  LOGGING.md  METRICS.md  docker-compose.yaml  prometheus.yaml  prometheus.yml  promtail-local-config.yaml  promtail.yaml
app_python/moscow_time/: __init__.py  __main__.py  cache.py  main.py  visits.py
app_python/project/: __init__.py
app_python/ptime/: main.py
app_python/services/: time.py  time_service.py  visit_counter_service.py
app_python/src/: __main__.py  app.py  business_logic.py  config.py  example.env  main.py  test.py  test_main.py  timezone.py
app_python/static/: index.html  script.js  style.css  styles.css
app_python/template/: index.html
app_python/templates/: base.html  base.j2  current_moscow_time.html  current_time.html  exception.html  index.html  moscow_time.html  page.html  time.html  time_template.html  visits.html  webprint.j2
app_python/terraform/: .gitignore  TF.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
app_python/test/: test_app.py
app_python/tests/: app_test.py  app_tests.py  conftest.py  success_test.py  test.py  test_app.py  test_app_calculations_functions.py  test_app_responses.py  test_flask_app.py  test_get_moscow_time.py  test_main.py  test_moscow_date_time.py  test_ptime.py  test_server.py  test_time.py  test_time_format.py  test_time_refreshing.py  test_time_service.py  test_web_app.py  time_tests.py
app_python/view/: index.html
app_python/yandex-cloud/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
app_rust/: .dockerignore  CI.md  Cargo.toml  DOCKER.md  Dockerfile  Makefile  README.md  RUST.md  Rocket.toml  docker-compose.yaml
app_rust/app/: Cargo.toml
app_rust/configuration/: base.yaml  production.yaml
app_rust/scripts/: init_db.sh
app_rust/src/: configurations.rs  (+4 more)
(+2399 files in other folders)
