[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alexandr Ragulin <a.ragulin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
flask = "^3.0.2"
pytz = "^2024.1"
waitress = "^3.0.0"
prometheus-client = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
