[package]
name = "app_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-prom = "0.8.0"
chrono = { version = "^0.4.33", features = ["serde"] }
chrono-tz = "^0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
